// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProductChildElement /> renders when data is loaded 1`] = `
<a
  className="MuiButtonBase-root-5 Component-button-1"
  href="/products/UHJvZHVjdDox/"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiCardMedia-root-8 Component-media-2"
    src={undefined}
    style={
      Object {
        "backgroundImage": "url(/media/__sized__/products/saleor/static/placeholders/t-shirts/5_ZoF6Xi8-crop-c0-5__0-5-255x255-70.jpg)",
      }
    }
  />
  <div
    className="MuiCardContent-root-10 Component-content-3"
  >
    <span
      className="MuiTypography-root-11 MuiTypography-button-22"
    >
      Lewis PLC
    </span>
    <p
      className="MuiTypography-root-11 MuiTypography-body1-20 Component-price-4"
    >
      62,43 USD
    </p>
  </div>
  <span
    className="MuiTouchRipple-root-36"
  />
</a>
`;

exports[`<ProductChildElement /> renders while data is loading 1`] = `
<a
  className="MuiButtonBase-root-5 Component-button-1"
  href="/"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="button"
  tabIndex="0"
>
  <div
    className="MuiCardMedia-root-8 Component-media-2"
    src={undefined}
    style={undefined}
  />
  <div
    className="MuiCardContent-root-10 Component-content-3"
  >
    <span
      className="MuiTypography-root-11 MuiTypography-button-22"
    >
      <span
        className="Component-skeleton-35"
        style={
          Object {
            "width": "80%",
          }
        }
      >
        ‌
      </span>
    </span>
  </div>
  <span
    className="MuiTouchRipple-root-36"
  />
</a>
`;
